# lol

./: .gitignore  Cargo.toml  LICENSE  README.md  hello
Lol_pro_beta_test/: LICENSE-COMMERCIAL  README.md
commercial/: Cargo.toml  LICENSE-COMMERCIAL
commercial/src/: appimage.rs  main.rs
examples/mixed_project/: hello.rs  helper.cpp  main.c  script.py
src/: appimage.rs  args.rs  compiler.rs  config.rs  file_detector.rs  language_support.rs  main.rs
test_project_appimage/AppDir/: AppRun
test_project_appimage/AppDir/usr/share/applications/: test_project.desktop
