[package]
name = "lol"
version = "0.1.0"
edition = "2021"
authors = ["UnderForge"]
description = "The Fast Multi-language Code Compiler CLI App"
license = "MIT"
repository = "https://github.com/notname9390/lol.git"
keywords = ["compiler", "cli", "multi-language", "build-tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
colored = "2.1"
indicatif = "0.17"
rayon = "1.8"
regex = "1.10"
config = "0.14"
dirs = "5.0"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "lol"
path = "src/main.rs" 