[package]
name = "lol-pro"
version = "1.0.0"
edition = "2021"
authors = ["LOL Pro Team <pro@lol-compiler.com>"]
description = "Professional Multi-language Code Compiler & AppImage Creator - Enterprise Edition"
license = "Commercial"
repository = "https://github.com/lol-pro/lol-compiler"
homepage = "https://lol-compiler.com"
documentation = "https://docs.lol-compiler.com"
keywords = ["compiler", "cli", "multi-language", "build-tool", "appimage", "enterprise", "professional"]
categories = ["command-line-utilities", "development-tools", "build-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.8"
regex = "1.10"
config = "0.14"
dirs = "5.0"
num_cpus = "1.16"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
image = "0.24"
base64 = "0.21"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
yaml-rust = "0.4"
log = "0.4"
env_logger = "0.10"
fern = "0.6"
notify = "6.1"
crossbeam = "0.8"
dashmap = "5.5"
lazy_static = "1.4"
memmap2 = "0.9"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
mockall = "0.12"
criterion = "0.5"

[[bin]]
name = "lol-pro"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[workspace]
members = ["lol-core", "lol-appimage", "lol-enterprise"] 